# dune-VaRA

./: .gitignore  .gitmodules
dune-performance-regressions/: CMakeLists.txt  config.h.cmake  dune-performance-regressions.pc.in  dune.module
dune-performance-regressions/cmake/modules/: CMakeLists.txt
dune-performance-regressions/doc/doxygen/: Doxylocal
dune-performance-regressions/dune/: CMakeLists.txt
dune-performance-regressions/dune/performance-regressions/: CMakeLists.txt  gridexamples.hh  gridmakers.hh  performance-regressions.hh  poisson-examples.hh  poisson-problem.hh
dune-performance-regressions/src/: CMakeLists.txt  dune-performance-regressions.cc  poisson-alberta.cc  poisson-alugrid.cc  poisson-test.cc  poisson-ug-pk-2d.cc  poisson-yasp-q1-2d.cc  poisson-yasp-q1-3d.cc  poisson-yasp-q2-2d.cc  poisson-yasp-q2-3d.cc
