add_compile_definitions(GRIDSDIR=\"${CMAKE_CURRENT_SOURCE_DIR}/grids\")

add_executable("dune_performance_regressions" dune-performance-regressions.cc)
add_executable("poisson_test" poisson-test.cc)
add_executable("poisson_alberta" poisson-alberta.cc)
add_executable("poisson_alugrid" poisson-alugrid.cc)
add_executable("poisson_ug_pk_2d" poisson-ug-pk-2d.cc)
add_executable("poisson_yasp_q1_2d" poisson-yasp-q1-2d.cc)
add_executable("poisson_yasp_q2_2d" poisson-yasp-q2-2d.cc)
add_executable("poisson_yasp_q1_3d" poisson-yasp-q1-3d.cc)
add_executable("poisson_yasp_q2_3d" poisson-yasp-q2-3d.cc)
